--- a/2.html
+++ b/2.html
@@ -33,7 +33,7 @@
 
   </a></p>
   <p><h1><a href="2-1.html#여" id="격" >격리된 온실에서</a>
-  <img src="file (1).gif" width="100%">
+  <img src="Comp3.gif" width="100%">
       <br><a href="2-2.html#여" id="궁" name="궁궐">궁궐의 도시, 서울? 그곳은 어떤 곳일까.</a>
       <br><a href="2-3.html#여" id="재" name="재현">재현을 폐기하는 데 이르는 길을 가리키고 있다.</a>
       <br><a href="2-4.html#여" id="나" name="나는">나는 매일 밤 홀로 대화를 시작한다.</a>
